<resources>
    <string name="app_name">RoboNav</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="username_icon">Username Icon</string>
    <string name="app_logo">App Logo</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_icon">Password Icon</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome_to_home">Welcome to Home</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="navigation">Navigation</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="confirm_password_icon">Confirm Password Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to Login</string>
    <string name="menu">Menu</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset Password</string>


</resources>
